fix: z-index problem

--- a/src/components/CurrencySelector/CurrencySelector.module.scss
+++ b/src/components/CurrencySelector/CurrencySelector.module.scss
@@ -33,7 +33,7 @@
   padding: 0 !important;
   height: fit-content !important;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
   left: 0;
   span {
     cursor: pointer;
